# data-engineering-zoomcamp

./: .env.template  .gitignore  Makefile  pyproject.toml
07-personal-practice/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml  zone_notebook.ipynb
07-personal-practice/terrademo/: main.tf  variables.tf
setup/: Dockerfile  Dockerfile copy  REPOSITORY_STRUCTURE_EXPLAINED.md  STANDARDIZED_REPO_SETUP_GUIDE.md  UV_SETUP_GUIDE.md  old-docker-compose.yaml
